src/test/deca/syntax/invalid/circular_include2.deca
#include "circular_include.deca"

{
print("ok");
}